--- a/estilo.css
+++ b/estilo.css
@@ -1,42 +1,43 @@
-*{
-box-sizing: border-box;
-padding: 0;
-margin: 0;
-margin-left: auto;
-  margin-right: auto;
-  text-align: center;
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
 }
 
-body{
-width: 80%;
+body {
+    width: 80%;
 }
-header{
+
+header {
     margin: 10%;
 }
 
-h1{
+h1 {
     font-size: 3.5em;
 }
 
-#ContenedorFlex{
+#ContenedorFlex {
     width: 90%;
-    height: 50vh;
-
-
-display: flex;
-flex-flow: row wrap;
-align-items: center;
-align-content: space-evenly;
-background-color:black;
-justify-content: space-between;
+    height: 30vh;
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+    align-content: space-evenly;
+    background-color: black;
+    justify-content: space-between;
+    border-radius: 20px;
 
 }
 
 
-.ElementoFlex{
- width: 23%;
-    height: 50%; 
-    background-color:white;
+.ElementoFlex {
+    width: 23%;
+    height: 70%;
+    background-color: white;
     margin: 5px;
-
+border-radius: 10%;
+padding: 7%;
 }
