--- a/web_personal/estilo.css
+++ b/web_personal/estilo.css
@@ -42,7 +42,7 @@
 }
 
 #titulo{
-    background-image: url("imagenes/Ilustración_sin_título\ 9.jpg") ;
+    background-image: url("imagenes/FONDO1.jpg") ;
     background-size: cover;
     background-clip: border-box;
     height: 90vh;
@@ -50,7 +50,7 @@
     padding-top: 25%;
     text-align: center;
     font-family: 'Kalnia', serif;
-    font-size: 2em;
+    font-size: 3em;
 }
 
 #habilidades{
@@ -70,7 +70,7 @@
 }
 
 #texto{
-    background-color: rgb(237, 230, 223);
+    background-color: rgb(236, 233, 229);
 }
 
 .ContenedorFlex{
@@ -105,9 +105,10 @@
 
 #herramientas{
     font-size: 1.2em;
-    margin-top: 35%;
+    margin-top: 45%;
     margin-left: 20%;
     font-family: 'Kalnia', serif;
+   
   
 }
 
@@ -202,4 +203,25 @@
 
 #Packaging:hover{
     text-shadow: 0 0 3px  #d7afba;
+}
+
+
+.ContenedorFlex2{
+    
+    height: 10vh;
+    width: 60%;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content:space-between;
+    align-items: center;
+    align-content: space-between;
+    margin-top: 27%;
+  
+    
+
+}
+
+.ElementoFlex2{
+    height: 100%;
+    width: 33%;
 }
